working on getting the app to work

--- a/budget-tracker/package.json
+++ b/budget-tracker/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "latest",
     "react-scripts": "3.0.1",
-    "react-redux": "latest"
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
