--- a/budget-tracker/package.json
+++ b/budget-tracker/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "browser-router": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "latest",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "redux-devtools-extension": "^2.13.8"
   },
